Fix hero styles on tablet

--- a/src/scss/modules/_hero.scss
+++ b/src/scss/modules/_hero.scss
@@ -517,6 +517,7 @@
         margin: 0;
         display: flex;
         flex-direction: column;
+        min-height: 150px;
 
         // typography
         text-align: left;
@@ -732,7 +733,7 @@
 
         // positioning
         position: absolute;
-        bottom: 40px;
+        bottom: 20px;
         right: -40px;
         top: 0;
         z-index: 1;
